plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.5'
}

group = 'me.burb'
version = '1.0'

repositories {
    mavenCentral()
    maven { url = uri("https://repo.papermc.io/repository/maven-public/") }
    maven {
        name = "CodeMC"
        url = uri("https://repo.codemc.io/repository/maven-public/")
    }
}

shadowJar {
    relocate("dev.jorel.commandapi", "me.burb.commandapi")
    relocate("de.tr7zw.changeme.nbtapi", "me.burb.nbtapi")
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation("de.tr7zw:item-nbt-api:2.14.0")
    implementation "dev.jorel:commandapi-bukkit-shade:9.6.0"
    compileOnly("io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

test {
    useJUnitPlatform()
}